<resources>
    <string name="app_name">Sharaguga</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_data">Данные</string>

    <string name="title_universities">Вузы</string>
    <string name="title_faculties">Факультеты</string>
    <string name="title_groups">Группы</string>

    <!-- Schedule -->

    <string-array name="tab_layout">
        <item>Пн</item>
        <item>Вт</item>
        <item>Ср</item>
        <item>Чт</item>
        <item>Пт</item>
        <item>Сб</item>
        <item>Вс</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string name="loading">Загрузка…</string>
    <string name="error">Ошибка загрузки данных</string>
    <string name="no_data">Нет данных</string>
    <string name="chill">Чилл</string>
    <string name="subject">Предмет</string>
    <string name="teacher">Преподаватель</string>
    <string name="place">Аудитория</string>
    <string name="lecture">Лекция</string>

    <string name="fab_content_description">добавить пару</string>
    <string name="add_period">Добавить пару</string>
    <string name="window">Окно</string>
    <string name="edit">Сохранить</string>
    <string name="delete">Удалить</string>

    <string name="edit_dialog_confirmation_delete">Удалить</string>
    <string name="edit_dialog_confirmation_cancel">Отмена</string>
    <string name="schedule_dialog_confirmation_title">Удаление пары</string>
    <string name="schedule_dialog_confirmation_message">Вы действительно хотите удалить пару?</string>
    <string name="period_save_error">Ошибка сохранения пары</string>
    <string name="period_save_success">Пара добавлена</string>
    <string name="period_delete_success">Пара удалена</string>
    <string name="period_delete_error">Ошибка удаления пары</string>
    <string name="subjects">Предметы</string>
    <string name="teachers">Преподаватели</string>
    <string name="places">Аудитории</string>

    <string-array name="add_period_spinner">
        <item>Первая пара</item>
        <item>Вторая пара</item>
        <item>Третья пара</item>
        <item>Четвертая пара</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_dialog_confirmation_title">Удаление</string>
    <string name="data_dialog_confirmation_message">Вы действительно хотите удалить</string>
    <string name="key_university_fragment">key_university_fragment</string>
    <string name="key_faculty">key_faculty</string>
    <string name="key_group">key_group</string>
    <!-- Preference Titles -->
    <string name="messages_header">Выбор группы</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_preferences">Настройки</string>
    <string name="key_university">key_university</string>

</resources>