<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="324dp"
    android:orientation="vertical"
    tools:context=".ui.AddPeriodFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/teacher" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lecture" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:text="@string/add_period"/>

</androidx.appcompat.widget.LinearLayoutCompat>