<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_schedule">

    <!-- schedule -->

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.yakushev.sharaguga.ui.schedule.ScheduleFragment"
        tools:layout="@layout/schedule_fragment">

        <argument
            android:name="groupPath"
            app:argType="string"
            android:defaultValue="null"/>

        <argument
            android:name="groupName"
            app:argType="string"
            android:defaultValue=""/>

        <action
            android:id="@+id/action_schedule_to_add_fragment"
            app:destination="@id/navigation_add_period"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_schedule_to_edit_fragment"
            app:destination="@id/navigation_edit_period"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <dialog
        android:id="@+id/navigation_add_period"
        android:name="com.yakushev.sharaguga.ui.schedule.AddDialog"
        tools:layout="@layout/schedule_dialog">

        <argument
            android:name="pairPosition"
            app:argType="integer"/>

        <argument
            android:name="dayPath"
            app:argType="string"/>

    </dialog>

    <dialog
        android:id="@+id/navigation_edit_period"
        android:name="com.yakushev.sharaguga.ui.schedule.EditDialog"
        tools:layout="@layout/schedule_dialog">

        <argument
            android:name="pairPosition"
            app:argType="integer"/>

        <argument
            android:name="dayPath"
            app:argType="string"/>

    </dialog>

    <!-- data -->

    <fragment
        android:id="@+id/navigation_data"
        android:name="com.yakushev.sharaguga.ui.data.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/data_fragment">

        <action
            android:id="@+id/action_data_to_dialog_add"
            app:destination="@id/navigation_data_dialog"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_data_to_dialog_edit"
            app:destination="@id/navigation_data_dialog_edit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <dialog
        android:id="@+id/navigation_data_dialog"
        android:name="com.yakushev.sharaguga.ui.data.DataDialog"
        tools:layout="@layout/data_dialog">

        <argument
            android:name="position"
            app:argType="integer"/>

        <argument
            android:name="page"
            app:argType="integer"/>

    </dialog>

    <dialog
        android:id="@+id/navigation_data_dialog_edit"
        android:name="com.yakushev.sharaguga.ui.data.DataDialogEdit"
        tools:layout="@layout/data_dialog">

        <argument
            android:name="position"
            app:argType="integer"/>

        <argument
            android:name="page"
            app:argType="integer"/>

    </dialog>

    <!-- choice -->

    <fragment
        android:id="@+id/navigation_universities"
        android:name="com.yakushev.sharaguga.ui.choice.universities.UniversitiesFragment"
        android:label="@string/title_universities"
        tools:layout="@layout/choice_fragment_universities" >

        <action
            android:id="@+id/action_universities_to_faculties"
            app:destination="@id/navigation_faculties"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/navigation_faculties"
        android:name="com.yakushev.sharaguga.ui.choice.faculties.FacultiesFragment"
        android:label="@string/title_faculties"
        tools:layout="@layout/choice_fragment_faculties">

        <argument
            android:name="universityId"
            app:argType="string"
            android:defaultValue="null"/>

        <argument
            android:name="universityName"
            app:argType="string"
            android:defaultValue=""/>

        <action
            android:id="@+id/action_faculties_to_groups"
            app:destination="@id/navigation_groups"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.yakushev.sharaguga.ui.choice.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/choice_fragment_groups">

        <argument
            android:name="facultyPath"
            app:argType="string"
            android:defaultValue="null"/>

        <argument
            android:name="facultyName"
            app:argType="string"
            android:defaultValue=""/>

        <!--
        <action
            android:id="@+id/action_groups_to_schedule"
            app:destination="@id/navigation_schedule"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         -->

    </fragment>


</navigation>